fix: a link icon wired on mobile

--- a/css/post.css
+++ b/css/post.css
@@ -602,8 +602,27 @@ pre {
 
 .prose a:not(.header-anchor) {
 	border-bottom: 1px solid rgba(125, 125, 125, 0.3);
-	margin: 0px .5e
+	margin: 0px .5em
 
+}
+
+.prose a:not(.header-anchor)::after {
+	content: '';
+	width: 1em;
+	height: 1em;
+	margin-left: .2em;
+	display: inline-flex;
+	background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"  width="1em" height="1em" viewBox="0 0 24 24"><path fill="black" d="m16 8.4l-8.9 8.9q-.275.275-.7.275t-.7-.275t-.275-.7t.275-.7L14.6 7H7q-.425 0-.712-.288T6 6t.288-.712T7 5h10q.425 0 .713.288T18 6v10q0 .425-.288.713T17 17t-.712-.288T16 16z"/></svg>') no-repeat center center;
+	background-size: contain;
+}
+.dark .prose a:not(.header-anchor)::after {
+	content: '';
+	width: 1em;
+	height: 1em;
+	margin-left: .2em;
+	display: inline-flex;
+	background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"  width="1em" height="1em" viewBox="0 0 24 24"><path fill="white" d="m16 8.4l-8.9 8.9q-.275.275-.7.275t-.7-.275t-.275-.7t.275-.7L14.6 7H7q-.425 0-.712-.288T6 6t.288-.712T7 5h10q.425 0 .713.288T18 6v10q0 .425-.288.713T17 17t-.712-.288T16 16z"/></svg>') no-repeat center center;
+	background-size: contain;
 }
 
 .prose a:not(.header-anchor):hover {
@@ -652,10 +671,3 @@ h6:focus .header-anchor {
 	opacity: 0.5;
 }
 
-.prose a:not(.header-anchor)::after {
-	content: '🡥';
-	width: 1em;
-	height: 1em;
-	margin-left: .2em;
-	display: inline-flex;
-}
